--- a/Components/origin.css
+++ b/Components/origin.css
@@ -1358,10 +1358,48 @@ ul{
 #OpenApiPage .api-feedback .left-api-feedback #viewer-star{
     display: none;
 }
-#OpenApiPage .api-feedback .right-api-feedback img{
+#OpenApiPage .api-feedback .right-api-feedback h4{
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--ngtxt-color);
+    margin: 20px 0px 0px 10px;
+}
+#OpenApiPage .api-feedback .right-api-feedback iframe{
     position: relative;
-    width: 70%;
+    width: 60%;
+    height: 250px;
     margin: auto auto;
+    border-radius: 10px;
+    overflow: none;
+}
+.search-not-found{
+    width: 100%;
+    padding: 20px 10px;
+    text-align: center;
+    display: none;
+    transition: all 1s ease-in-out;
+}
+.search-not-found .error i{
+    font-size: 80px;
+    color: red;
+    margin-bottom: 10px;
+}
+.search-not-found .error h4{
+    color: red;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Consolas, 'Courier New', monospace;
+}
+.search-not-found .error h3{
+    font-size: 16px;
+    font-family: sans-serif;
+    color: var(--wtxt-color);
+}
+.search-not-found .error p{
+    font-size: 14px;
+    font-family: sans-serif;
+    color: var(--gry-color);
+    text-align: center;
 }
 @media only screen and (max-width: 900px){
     #loading .head{
@@ -1644,6 +1682,19 @@ ul{
     }
     .star-widget{
         width: 75%;
+    }
+    #OpenApiPage .api-feedback .left-api-feedback #viewer-rate{
+        width: 80%;
+        margin: 0px auto;
+    }
+    #OpenApiPage .api-feedback .right-api-feedback iframe{
+        width: 95%;
+        height: 200px;
+        margin-top: 20px;
+    }
+    .search-not-found .error p{
+        text-align: justify;
+        padding: 0px 2px;
     }
 }
 @media only screen and (min-width: 900px) and (max-width: 1023px){
