--- a/Components/origin.css
+++ b/Components/origin.css
@@ -1538,6 +1538,20 @@ ul{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: var(--wtxt-color);
 }
+#badLinkHit{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background: var(--bg-color);
+    z-index: 99;
+    display: none;
+}
+#badLinkHit .search-not-found{
+    display: block;
+    margin-top: 10%;
+}
 @media only screen and (max-width: 900px){
     #loading .head{
         margin-top: 45%;
