--- a/Components/origin.css
+++ b/Components/origin.css
@@ -1614,7 +1614,6 @@ ul{
     margin-top: 10%;
 }
 #globalSearch{
-    display: block;
     width: 35%;
     max-height: 600px;
     position: absolute;
@@ -1625,12 +1624,11 @@ ul{
     box-shadow: 0px 0px 6px 2px #000;
     overflow: hidden;
     z-index: 99;
-    display: flex;
-    flex-direction: column;
+    display: none;
     justify-content: space-around;
     transition: 1s ease-in-out;
 }
-#globalSearch #userSearch{
+#globalSearch #userSearch,#globalSearch #apiSearch{
     width: 100%;
     margin: 10px 0px;
     border-bottom: 2px solid var(--wtxt-color);
@@ -1647,7 +1645,6 @@ ul{
     list-style: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     width: 100%;
     max-width: 100%;
     min-width: 100%;
@@ -1665,6 +1662,8 @@ ul{
     flex-direction: row;
     justify-content: space-around;
     padding: 4px 0px;
+    transition: 1s ease-in-out;
+    cursor: pointer;
 }
 #globalSearch #userSearch ul li .user-left{
     width: 20%;
@@ -1699,6 +1698,111 @@ ul{
     color: var(--blink-color);
     font-family: serif;
     font-size: 12px;
+}
+#globalSearch #apiSearch ul{
+    width: 100%;
+    max-height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px 0% 0px 0px;
+    margin: 0px;
+    overflow: hidden;
+}
+#globalSearch #apiSearch ul li{
+    width: 40%;
+    margin: 0px 0px 20px 0px;
+    display: list-item;
+    box-shadow: 0px 0px 4px 1px #000;
+    border-radius: 10px;
+    padding: 4px 0px;
+    transition: 1s ease-in-out;
+    cursor: pointer;
+}
+#globalSearch #apiSearch ul li .api-upper,#globalSearch #apiSearch ul li .api-lower{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+#globalSearch #apiSearch ul li .api-upper .api-upper-left{
+    width: 10%;
+}
+#globalSearch #apiSearch ul li .api-upper .api-upper-left span{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: gray;
+    padding: 0px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    color: var(--wtxt-color);
+}
+#globalSearch #apiSearch ul li .api-upper .api-upper-right{
+    width: 80%;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: sans-serif;
+    color: var(--wtxt-color);
+    max-height: 22px;
+    overflow: hidden;
+}
+#globalSearch #apiSearch ul li .api-middle,#globalSearch #apiSearch ul li .api-lower{
+    width: 100%;
+    padding: 2px;
+}
+#globalSearch #apiSearch ul li .api-middle p{
+    font-size: 12px;
+    text-align: justify;
+    color: var(--gry-color);
+    padding: 2px;
+    margin: 0px;
+    line-height: 18px;
+    word-wrap: break-word;
+    max-height: 60px;
+    overflow: hidden;
+}
+#globalSearch #apiSearch ul li .api-lower div{
+    font-size: 12px;
+    font-weight: 800;
+    font-family: Consolas, 'Courier New', monospace;
+    text-transform: capitalize;
+    color: var(--blink-color);
+    width: 45%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+#globalSearch #apiSearch ul li .api-lower div i{
+    margin: auto;
+}
+#globalSearch #apiSearch .load{
+    width: 100%;
+    margin: 0px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 14px;
+    color: var(--ngtxt-color);
+    cursor: pointer;
+}
+#globalSearch #pageSearch ul{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px 2px 4px 10px;
+}
+#globalSearch #pageSearch ul li{
+    width: 30%;
+    font-size: 16px;
+    color: var(--wtxt-color);
+    cursor: pointer;
+}
+#globalSearch #pageSearch ul li:hover{
+    color: blue;
+    text-decoration: underline;
+    transition: 1s ease-in-out;
 }
 #globalSearch #missSearch{
     width: 100%;
@@ -2044,16 +2148,25 @@ ul{
     #AccountPage .accountBox{
         width: 90%;
     }
-    #accountName {
+    #accountName{
         width: 90%;
         margin: 0px 5%;
     }
-    #globalSearch {
+    #globalSearch{
         width: 94%;
-        max-height: 450px;
+        max-height: 800px;
         position: absolute;
         top: 25%;
         right: 3%;
+    }
+    #globalSearch #apiSearch ul{
+        max-height: 560px;
+    }
+    #globalSearch #apiSearch ul li{
+        width: 90%;
+    }
+    #globalSearch #pageSearch ul li{
+        width: 50%;
     }
 }
 @media only screen and (min-width: 900px) and (max-width: 1023px){
