--- a/Components/origin.css
+++ b/Components/origin.css
@@ -1,6 +1,6 @@
 :root {
     --bg-color: #000000ec;
-    --nv-color: #343a40;
+    --nv-color: #222831;
     --wtxt-color: #fff;
     --blink-color: antiquewhite;
     --nvtxt-color: #cfd2d6;
